# learn-me-a-haskell

./: ICTLAB-SETUP.bat  README.md
Lab00/: LICENSE  README.md  lab00.cabal
Lab00/.stack-work/install/x86_64-linux/lts-6.19/7.10.3/flag-cache/: HUnit-1.3.1.2-58f143e9dbedd80ef51225b170976953  QuickCheck-2.8.2-4a8ff054680a1e6817d7a2f4ce006391  ansi-terminal-0.6.2.3-7b40b18f4e53e6f53c2ffd807e929ca9  ansi-wl-pprint-0.6.7.3-c624a14e647c937768855ca360a122b5  extensible-exceptions-0.1.1.4-8159918b63d70675389129eaecbf720a  hostname-1.0-d89dea758ee32ec5c87a4e8453109323  test-framework-0.8.1.1-3b134331dbe3a97ae8be65172567ff8e  test-framework-hunit-0.3.0.2-3160c3fb11ce6a8eb7f0c2231cd1b2ce  test-framework-quickcheck2-0.3.0.3-bf05efbfe3417cd81adb05c1df84881b  text-1.2.2.1-f5b1651133426aa2c83c19d64d248779  xml-1.3.14-f241a4f551afa7e9420887b856cac06e
Lab00/.stack-work/install/x86_64-linux/lts-6.19/7.10.3/pkgdb/: package.cache  (+1 more)
Lab00/src/: Lab00.hs  Main.hs
Lab00/test/: Main.hs
Lab01/: LAB01.md  README.md  lab01.cabal
Lab01/src/: Lab01.hs  Main.hs
Lab01/test/: Main.hs
Lab02/: LAB02.md  README.md  lab02.cabal
Lab02/.stack-work/install/x86_64-linux/lts-6.19/7.10.3/flag-cache/: lab02-0.1.0.0-8aa4073730c676dbe210ea8bffd8d092
Lab02/.stack-work/install/x86_64-linux/lts-6.19/7.10.3/pkgdb/: lab02-0.1.0.0-8aa4073730c676dbe210ea8bffd8d092.conf  package.cache
Lab02/src/: Lab02.hs  Main.hs
Lab02/test/: Main.hs
Lab03/: README.md  lab03.cabal
Lab03/src/: Lab03.hs  Main.hs
Lab03/test/: Main.hs
Lab04/: README.md
Lab04/src/: BinTree.hs  Lab04.hs  Main.hs  REPL.hs
Lab04/test/: add_revise.txt  empty_add.txt
help/Lab04/: lab04.cabal
help/Lab04/.stack-work/install/x86_64-osx/lts-6.19/7.10.3/flag-cache/: lab04-0.1.0.0-8aa4073730c676dbe210ea8bffd8d092
help/Lab04/.stack-work/install/x86_64-osx/lts-6.19/7.10.3/pkgdb/: lab04-0.1.0.0-8aa4073730c676dbe210ea8bffd8d092.conf  package.cache
help/Lab04/src/: BinTree.hs  Lab04.hs  Main.hs
help/Lab04/test/: Main.hs  ghb.txt
(+7 files in other folders)
