name:                lab02
version:             0.1.0.0
synopsis:            CS3016 Lab Two
license:             BSD3
license-file:        LICENSE
author:              Andrew Butterfield
maintainer:          Andrew.Butterfield@scss.tcd.ie
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:      base

  hs-source-dirs:     src/
  default-language:   Haskell2010

executable lab02
  main-is:            Main.hs
  build-depends:      base
                      

  hs-source-dirs:     src/
  default-language:   Haskell2010

test-suite Main
  main-is: Main.hs
  type: exitcode-stdio-1.0
  x-uses-tf: true
  build-depends:  base,
                  HUnit,
                  test-framework,
                  test-framework-hunit,
                  test-framework-quickcheck2

  hs-source-dirs: test, src
  default-language: Haskell2010
